k8s/base/mysql-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mysql-ingress
  namespace: tasksystem
  labels:
    app.kubernetes.io/name: mysql
    app.kubernetes.io/part-of: tasksystem

spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: mysql

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: api

        - podSelector:
            matchLabels:
              app.kubernetes.io/component: migration

      ports:
        - protocol: TCP
          port: 3306
